# navigation-case-study

./: README.md
Concept/: README.md
Concept/RoboArch/: .project  representations.aird  turtlebot.rac
Concept/RoboChart/: .project  Adaptation.rct  Adaptation_Analyse.rct  Adaptation_Execute.rct  Adaptation_Knowledge.rct  Adaptation_Legitimate.rct  Adaptation_Monitor.rct  Adaptation_Plan.rct  Control.rct  Turtlebot.rct  Types.rct  representations.aird  sequence_functions.rct
Design/: README.md  messages.aadl  navigation.aadl
Realisation/: README.md  apply_fix.py  docker-compose.yml  main.py  requirements.txt
Realisation/Orchestrator/: Dockerfile
Realisation/docker/: DOCKER_COMMUNICATION_FIX.md  DOCKER_QUICK_START.md  DOCKER_SIMPLE_WAYPOINT_GUIDE.md  DOCKER_WAYPOINT_NAVIGATOR_GUIDE.md  Dockerfile  Dockerfile.rosmqttbridge  README_WAYPOINT_SERVICE.md  WAYPOINT_NAVIGATOR_PATHS.md  build-waypoint-navigator.sh  docker-compose.waypoint-navigator-simple.yaml  docker-compose.waypoint-navigator.yaml  entrypoint.sh  run-waypoint-navigator.sh  setup.bash  validate-setup.sh
Realisation/extra-docs/: BUILD_AND_TEST_FIX.md  BUILD_COMPLETE.md  CURRENT_STATUS.md  DIAGNOSIS_INITIAL_POSE.md  DOCKER_BUILD_FIX.md  DOCKER_SUMMARY.md  DOCKER_WAYPOINT_NAVIGATOR.md  FINAL_DOCKER_SUMMARY.md  (+36 more)
Realisation/turtlebotrossim/src/turtlebot3_waypoint_navigator/: README.md  package.xml  setup.py
Realisation/turtlebotrossim/src/turtlebot3_waypoint_navigator/turtlebot3_waypoint_navigator/: __init__.py  navigator_nav2.py  navigator_nav2.py.backup  navigator_nav2.py.backup2  navigator_twist.py
(+173 files in other folders)
