<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_waypoint_navigator</name>
  <version>1.0.0</version>
  <description>TurtleBot 3 Waypoint Navigator - Autonomous navigation through predefined waypoint sequences</description>
  <maintainer email="contact@robosapiens.org">RoboSapiens</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Navigation and TurtleBot Dependencies -->
  <depend>nav2_msgs</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_gazebo</depend>

  <!-- Transform Dependencies -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf_transformations</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
